# cookiecutter-pypackage

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.package_name}}/tests/: test_{{ cookiecutter.project_slug }}.py
